--- a/jardiquest/static/css/view/market/product.css
+++ b/jardiquest/static/css/view/market/product.css
@@ -48,6 +48,7 @@
     top : 8em;
     right : 2%; 
     background-color: var(--background-secondary);
+    opacity: 0.9;
     border-radius: 5px;
     padding : 5px;
 }
