--- a/jardiquest/static/css/view/quests/quests_list.css
+++ b/jardiquest/static/css/view/quests/quests_list.css
@@ -1,6 +1,13 @@
+#quest_buttons_container{
+    display : flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 20px;
+}
+
 .quest_button{
-    margin-left:2%;
     margin-top: 10px;
+    margin-bottom: 10px;
     border: none;
     font-size: 1.5em;
     display: inline-block;
@@ -8,9 +15,14 @@
     text-decoration : none;
 }
 
+#button_my_quests{
+    margin-left:2%;
+}
+
 #message_no_quest{
     font-size: 1.3em;
-    margin : 20px 0 0 10%;
+    text-align: center;;
+    margin-top : 50px;
     display: block;
 }
 
