--- a/jardiquest/static/css/view/quests/user_quests_list.css
+++ b/jardiquest/static/css/view/quests/user_quests_list.css
@@ -1,12 +1,7 @@
-#button_available_quests{
-    opacity: 0.2;
+#button_my_quests{
+    color: var(--brown-orange);
 }
 
 #button_available_quests:hover{
-    opacity: 0.6;
-}
-
-#button_my_quests:hover{
-    text-shadow: 0px 0px 1px var(--green);
-}
-
+    color : var(--taupe);
+}   
