--- a/jardiquest/static/css/view/market/product.css
+++ b/jardiquest/static/css/view/market/product.css
@@ -84,6 +84,18 @@
     grid-template-columns: 2fr 1fr 2fr;
 }
 
+#sell_product {
+    margin : 20px 20px 3em 50px;
+    display : flex;
+    flex-direction: column;
+    gap : 10px;
+}
+
+#sell_product input {
+    width : 100px;
+}
+
+
 .quantity{
     border-right: 1px solid black;
     grid-row: 1;
