Finalisation add to market page

--- a/jardiquest/view/market_product.html
+++ b/jardiquest/view/market_product.html
@@ -36,7 +36,7 @@
         {% if not sellings %}
             <p id="no_sellings_message">Aucune vente n'est actuellement disponible</p>
         {% else %}
-            <div id = "sort_sellings">
+            <div id = "sort_sells">
                 <p>Trier par :</p>
                 <select name="sort_sellings" id="sort_sellings">
                     <option value="price">Prix</option>
