--- a/jardiquest/static/css/view/market/product.css
+++ b/jardiquest/static/css/view/market/product.css
@@ -63,8 +63,9 @@
     gap : 10px;
 }
 
-#sort_sellings{
+#sort_sells{
     margin-bottom : 5px;
+    margin-left : 5%;
 }
 
 #no_sellings_message{
@@ -84,8 +85,17 @@
     grid-template-columns: 2fr 1fr 2fr;
 }
 
+h4{
+    margin-left: 50px;
+}
+#sell{
+    margin : 20px 50px 3em 50px;
+    padding : 10px 10px 10px 20px;
+    background-color: var(--background-secondary);
+    border-radius: 10px;
+}
+
 #sell_product {
-    margin : 20px 20px 3em 50px;
     display : flex;
     flex-direction: column;
     gap : 10px;
