--- a/jardiquest/view/suggestion.html
+++ b/jardiquest/view/suggestion.html
@@ -1,59 +1,81 @@
 {% extends "_base.html" %}
-{% set active='garden' %}
-{% include "_navbar.html" %}
 {% block content %}
 
-<title>Suggestion</title>
+{% set active="market" %}
+{% include "_navbar.html" %}
+
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/suggestion.css') }}">
 
-<div>
-    <b class="brown-orange-style">Mon jardin :</b>
-    {% if jardin.name|length == 0 %}
-        <span>Vous n'avez pas de jardin</span>
+<div id="market">
+    <div id="market_top">
+        <p>Panier recommandé</p>
+        <div class="buy_form">
+            <input type="submit" class="buy_button" value="Acheter" data-toggle="modal" data-target="#myModal">
+        </div>
+        <div>
+            <button>Retour</button>
+        </div>
+        <div>
+            <p>Prix du panier : {{prix}}</p>
+        </div>
+        <div id="user_golds">
+            <p>Vous avez : {{ user.balance }} {{ jardin.moneyName }}</p>
+        </div>
+    </div>
+    
+    {% if length==0 %}
+        <div id="market_no_product">
+            <p>Aucun produit n'est actuellement disponible</p>	
+        </div>
     {% else %}
-        <span>{{jardin.name}}</span>
-        <br>
-        {% if recoltes|length > 0 %}
-        <span>Recoltes de mon jardin :</span>
-        <table>
-            <tr>
-                <td>id recolte</td>
-                <td>quantité</td>
-                <td>date</td>
-                <td>prix</td>
-                <td>légume</td>
-                <td>quantité rec</td>
-                <td>jardin</td>
-            </tr>
-            {% for recolte in recoltes %}
-            <tr>
-                <td>{{recolte.idRecolte}}</td>
-                <td>{{recolte.quantity}}kg</td>
-                <td>{{recolte.date}}</td>
-                <td>{{recolte.cost}}$</td>
-                <td>{{recolte.idCatalogue}}</td>
-                <td>{{recolte.qtt_recommandee}}</td>
-                <td>{{recolte.idJardin}}</td>
-            </tr>
-            {% endfor %}
-        </table>
-        
-        {% else %}
-        <span>Aucune récolte</span>
-        {% endif %}
-    {% endif %}
-    <br>
-    <b class="brown-orange-style">Mon solde :</b>
-    <span>{{user.balance}}</span>
+    <div id="market_products">
+        {% for i in range(0,length) %}
+        <div class="product searching_items" style="cursor: pointer;" onclick="window.location='{{url}}';">
+            <div class="product_type">
+                <p class="type">{{ produits[i].name }}</p>
+            </div>
 
-    <br>
-    Suggestion :
-    <br>
-        Prix : {{prix}} {{jardin.moneyName}}
-    <br>
-        Poids : {{poids}} kg
-    <br>
-        Panier : {{panier}}
+            <div class="product_name searching_property">
+                <p class="name">{{ produits[i].name }}</a>
+            </div>
+            
+            <div class="product_quantity">
+                <p>Quantité recommandée : <span class="quantity_float">{{ numbs[i] }}</span> lots de <span class="quantity_float">{{ recoltes[i].qtt_recommandee }}</span>kg</p>
+            </div>
+
+            <div class="product_cheaper_price">
+                <p><span class="price">Prix total : </span>{{ "%.2f" % (recoltes[i].cost*numbs[i]*recoltes[i].qtt_recommandee)}} {{ jardin.moneyName }}</p>
+            </div>
+
+        </div>
+        {% endfor %}
+    </div>
+    {% endif %}
+
+
 </div>
+
+<script src="{{ url_for('static', filename='js/flash_messages_modal.js') }}"></script>
+<script src="{{ url_for('static', filename='js/market_product.js') }}"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+<!--
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+      
+    <div class="modal-content">
+        <div class="modal-header">
+            <h4 class="brown-orange-style">Confirmer l'achat</h4>
+        </div>
+        <div class="modal-body">
+            <p>Voulez-vous vraimer acheter ce panier ?</p>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Annuler</button>
+            <button type="button" id="button_confirm_buy" class="btn btn-default">Confirmer</button>
+        </div>
+    </div>        
+</div> -->
 
 {% endblock %}
