--- a/jardiquest/view/modify_garden.html
+++ b/jardiquest/view/modify_garden.html
@@ -1,5 +1,5 @@
 {% extends "_base.html" %}
-{% set active='user' %}
+{% set active='garden' %}
 {% include "_navbar.html" %}
 {% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/new_garden.css') }}">
