--- a/jardiquest/static/css/view/garden.css
+++ b/jardiquest/static/css/view/garden.css
@@ -25,9 +25,17 @@
 }
 
 .find{
+    margin-top: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     justify-items: center;
+}
+
+.find button{
+    margin: 3px 10px 3px 0;
+    padding: 8px;
+    font-size: medium;
+    width: 6em;
 }
 
 .right{
