--- a/jardiquest/static/css/view/market/market.css
+++ b/jardiquest/static/css/view/market/market.css
@@ -31,6 +31,20 @@
     font-size: 0.9em;
 }
 
+.suggestion_button button{
+    margin: 5px 10px 5px 0;
+    padding: 10px;
+    font-size: large;
+    width: 7em;
+    text-align: center;
+}
+
+.suggestion_button{
+    margin-left: 35%;
+}
+
+.suggestion_button a:link { text-decoration: none; }
+
 #research_bar {
     background-image: url('/static/image/icon/search_icon.png'); /* Add a search icon to input */
     background-position: 10px 12px; /* Position the search icon */
@@ -133,4 +147,10 @@
 
 .product_cheaper_price p{
     color : inherit;
+}
+
+@media only screen and (max-width: 1200px) {
+    .suggestion_button{
+        margin-left: auto;
+    }
 }
