--- a/jardiquest/view/handle_garden.html
+++ b/jardiquest/view/handle_garden.html
@@ -68,7 +68,7 @@
             </div>
             <div class="button-panel">
 
-                <button class="green" onclick="updateGarden()">Sauvegarder</button>
+                <button class="green" onclick="updateGarden()">Enregistrer les modifications du Jardin</button>
                 
                 <form action="/handle_garden/add_quest" method="get">
                     <button class="green" type="submit" >Ajouter une quête</button>
