--- a/jardiquest/view/blog.html
+++ b/jardiquest/view/blog.html
@@ -8,7 +8,7 @@
 
 <title>Blog</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/profile.css') }}">
-<link rel="stylesheet" href="{{ url_for('static', filename='css/view/handle_garden.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/view/blog.css') }}">
 
 
 <div class="portal-container">
@@ -18,48 +18,25 @@
             <span class="display-name">Blog du Jardin<span>
         </div>
         <hr class="litle-hr">
-            <div>
-                <form action="/handle_garden" method="post" class="handler-display-data" id="update-garden">
-                    <input type="hidden" name="_method" value="put"/>
-                    <div>
-                        <b>Identifiant du jardin</b> <br>
-                
-                    </div>
-                    <div>
-                        <b>Nom</b> <br>
-                
-                    </div>
+        <div>
+            {% for m in messages %}
+            <div class="messages">
+                <p class="user">{{m.email}}</p>
+                <p class="msg">{{m.message}}</p>
+                <p class="date-msg">Date du Post : {{m.timestamps}}</p> 
+            </div> 
+            {%endfor%}
+        </div>
 
-                    <div>
-                        <b>Nom de la monnaie</b> <br>
-                
-                    </div>
-            </div>
-            <div class="button-panel">
-
-                <button class="green" onclick="updateGarden()">Sauvegarder</button>
-                
-                <form action="/handle_garden/add_quest" method="get">
-                    <button class="green" type="submit" >Ajouter une quête</button>
-                </form>
-                
-                
-                <button class="red" onclick="deleteGarden()">Supprimer le Jardin</button>
-                <form action="/handle_garden" method="post" id="delete-garden">
-                    <input type="hidden" name="_method" value="delete" />
-                </form>
-
-            </div>
+        <div>
+            
+            <form class="new-messages" action="/blog" method="post">
+                <p>Annoncez-ici les informations importantes pour le jardin !</p>
+                <textarea id="msg" name="msg" maxlength="30"></textarea>
+                <button class="msg-button">Envoyez votre annonce</button>
+            </form>
+            
+        </div>
     </div>
 </div>
-<script>
-    function deleteGarden() {
-        if (confirm("Voulez vous vraiment supprimer votre jardin ?")) {
-            document.getElementById("delete-garden").submit()
-        }
-    }
-    function updateGarden() {
-        document.getElementById("update-garden").submit()
-    }
-</script>
 {% endblock %}
