--- a/jardiquest/static/css/view/quests/quest_details.css
+++ b/jardiquest/static/css/view/quests/quest_details.css
@@ -19,14 +19,30 @@ body{
 #quest_header{
     display: grid;
     column-gap : 10px;
-    margin : 0 50px 30px 50px;
+    margin : 0 50px 30px 0;
+    grid-template-columns: 60px 1fr 1fr;
     padding-top : 15px;
+}
+
+#back_arrow{
+    grid-column: 1;
+    grid-row: 1/3;
+    width: 40px;
+    height: 40px;
+    margin-left : 20px;
+    margin-right : 10px;
+    filter: invert(42%) sepia(4%) saturate(2457%) hue-rotate(54deg) brightness(93%) contrast(81%);
+}
+
+#back_arrow:hover{
+    cursor: pointer;
+    filter: invert(48%) sepia(96%) saturate(274%) hue-rotate(352deg) brightness(98%) contrast(91%);
 }
 
 
 #quest_title{
     font-size: 1.5em;
-    grid-column: 1;
+    grid-column: 2;
     grid-row: 1;
     text-decoration: underline;
     display: inline-block;
@@ -35,7 +51,7 @@ body{
 #time_left{
     display:flex;
     justify-self: end;
-    grid-column: 2;
+    grid-column: 3;
     grid-row : 1;
     font-size: 1.3em;
 }
@@ -48,7 +64,7 @@ body{
 
 #estimated_time{
     grid-row : 2;
-    grid-column: 1;
+    grid-column: 2;
     display: block;
 }
 
