--- a/jardiquest/view/sell_product.html
+++ b/jardiquest/view/sell_product.html
@@ -6,11 +6,23 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/market/product.css') }}">
 
 
+{% with messages = get_flashed_messages(category_filter=["error"]) %}
+    {% if messages %}
+    <div id="flash_messages">
+        <p id="category_message" hidden>Erreur</p>
+        <p id="flash_message" hidden>{{ messages[0] }}</p>
+        <div id="flash_message_buttons" hidden>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Ok</button>
+        </div>
+    </div>
+    {% endif %}
+{% endwith %}
+
 <div id="market_product"></div>
     <div id="market_product_presentation">
         <h2 id="product_name">{{ product.name }}</h2>
         <div id="product_desc_img">
-            <img src="{{ url_for('static', filename='image/vegetables/' + product.imagePath) }}" alt="image de {{ product.name }}">
+            <img src="{{ url_for('static', filename='image/vegetables/' + product.imagePath) }}" alt="image de {{ product.name }}" id="product_image">
             <p id="product_desc">{{ product.description }} <a id="product_desc_source" href="{{ product.description_source }}">(source)</a></p> 
         </div>
     </div>
