add_nbParticipants_to_garden

--- a/jardiquest/static/css/view/garden.css
+++ b/jardiquest/static/css/view/garden.css
@@ -103,8 +103,9 @@
 
 .attributs{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr;
     align-self: center;
+    place-items: center;
 }
 
 .input {
