--- a/jardiquest/view/garden.html
+++ b/jardiquest/view/garden.html
@@ -33,24 +33,24 @@
                     {% endif %}
                     {% if name|length == 0 %}
                     <b class="brown-orange-style">Mon jardin :</b>
-                    <span>Vous n'avez pas de jardin</span>
+                    <span>Pas de jardin</span>
                 </div>
                 {% else %}
                 <h1 class="garden-name">{{ jardin.name }}</h1>
             </div>
             <div class="money_city">
-                <b class="brown-orange-style">Monnaie :</b>
-                <span>{{jardin.moneyName}}</span>
-                <br>
-                <b class="brown-orange-style">Ville :</b>
-                <span>{{jardin.ville}}</span>
-            </div>
-            <div>
                 <b class="brown-orange-style">Adresse :</b>
-                <span>{{jardin.adresse}}</span>
+                <span>{{jardin.adresse}} {{jardin.ville}}</span>
                 <br>
                 <b class="brown-orange-style">Role :</b>
                 <span>{{user.role}}</span>
+            </div>
+            <div>
+                <b class="brown-orange-style">Monnaie :</b>
+                <span>{{jardin.moneyName}}</span>
+                <br>
+                <b class="brown-orange-style">Participants :</b>
+                <span>{{jardin.nbParticipants}}</span>
             </div>
             {% endif %}
         </div>
@@ -77,7 +77,7 @@
             <!-- To leave a garden we must be a participant that is in a garden -->
             {% if idJardin|length != 0 %}
             {% if user.role == 'Participant' %}
-            <button class="button_edit"><a href="{{url_for('controller.leave')}}">Quitter</a></button>
+            <button class="button_edit"><a href="{{url_for('controller.leave',id=jardin.idJardin)}}">Quitter</a></button>
             {% endif %}
             {% endif %}
         </div>
@@ -102,6 +102,7 @@
                     <th>Monnaie</th>
                     <th>Ville</th>
                     <th>Adresse</th>
+                    <th>Participants</th>
                     {% if user.role == 'Participant' %}
                     <th>Choisir</th>
                     {% endif %}
@@ -189,7 +190,7 @@
         }
 
         function chooseButton(row) {
-            const choose = '<button type="button" onclick="changeId(\'' + row[5] + '\')" data-toggle="modal" data-target="#myModal">Choisir</button>'
+            const choose = '<button type="button" onclick="changeId(\'' + row[6] + '\')" data-toggle="modal" data-target="#myModal">Choisir</button>'
             return choose
         }
 
@@ -202,13 +203,13 @@
         function addRow(row, elt) {
 
             if (role == 'Participant') {
-                if (!row[5].includes('button type="button"')) {
+                if (!row[6].includes('button type="button"')) {
                     choose = chooseButton(row)
                     row.pop()
                     row.push(choose)
                 }
             } else {
-                row = row.slice(0, 5)
+                row = row.slice(0, 6)
             }
 
             var ligne = elt.insertRow(-1);
