Solving several problems

--- a/jardiquest/view/orders.html
+++ b/jardiquest/view/orders.html
@@ -1,5 +1,6 @@
 {% extends "_base.html" %}
 {% set active='user' %}
+{% set active="handlegarden" %}
 {% include "_navbar.html" %}
 {% block content %}
 
