--- a/jardiquest/view/sell_catalogue.html
+++ b/jardiquest/view/sell_catalogue.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
 {% block content %}
 
-{% set active="market" %}
+{% set active="handlegarden" %}
 {% include "_navbar.html" %}
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/market/market.css') }}">
