--- a/jardiquest/view/market.html
+++ b/jardiquest/view/market.html
@@ -42,6 +42,11 @@
                 <a href="{{url_for('controller.suggestion')}}">Suggestion</a>
             </button>
         </div>
+        <div class="history_button">
+            <button>
+                <a href="{{url_for('controller.user_orders')}}">Mes commandes</a>
+            </button>
+        </div>
     </div>
 
     {% if not produits %}
