--- a/jardiquest/view/user_orders.html
+++ b/jardiquest/view/user_orders.html
@@ -21,7 +21,7 @@
             <p>Etat de la commande : </p>
             <select name="filter_state" id="filter_states">
                 <option value="all">Tous</option>
-                <option value="not_finished">Commande en attente</option>
+                <option value="not_finished">En attente</option>
                 <option value="finished">Commandes finalisées</option>
             </select>   
         </div>
