--- a/jardiquest/static/css/view/market/market.css
+++ b/jardiquest/static/css/view/market/market.css
@@ -31,7 +31,7 @@
     font-size: 0.9em;
 }
 
-.suggestion_button button{
+.suggestion_button button {
     margin: 5px 10px 5px 0;
     padding: 10px;
     font-size: large;
@@ -39,11 +39,22 @@
     text-align: center;
 }
 
+.history_button button{
+    margin: 5px 10px 5px 0;
+    padding: 10px;
+    font-size: large;
+    text-align: center;
+}
+
 .suggestion_button{
     margin-left: 35%;
 }
 
-.suggestion_button a:link { text-decoration: none; }
+.history_button{
+    margin-left: 4px;
+}
+
+.suggestion_button a:link, .history_button a:link { text-decoration: none; }
 
 #research_bar {
     background-image: url('/static/image/icon/search_icon.png'); /* Add a search icon to input */
@@ -150,7 +161,7 @@
 }
 
 @media only screen and (max-width: 1200px) {
-    .suggestion_button{
+    .suggestion_button, .history_button{
         margin-left: auto;
     }
 }
