--- a/jardiquest/static/css/view/blog.css
+++ b/jardiquest/static/css/view/blog.css
@@ -1,3 +1,30 @@
+.portal-container {
+    align-self: center;
+    width: 100vw;
+    display: flex;
+    padding: 2em 10%;
+}
+
+.centered-element {
+    margin: auto;
+    width: 100%;
+    height: fit-content;
+    background-color: var(--background-secondary);
+}
+
+.align-user-icon {
+    text-align: center;
+}
+
+.display-name {
+    font-size: xx-large;
+    text-align: center;
+    margin: 0.5em 0;
+}
+
+.litle-hr {
+    margin: 1px 15% 2em;
+}
 
 .messages{
     align-self: center;
